Name:                potrace
Version:             0.1
Synopsis:            High-level bindings to the potrace bitmap tracing library
Description:
  This package contains high-level bindings to potrace, a library for
  tracing bitmap images. Potrace is available at
  <http://potrace.sourceforge.net/>.
Homepage:            https://github.com/rwbarton/potrace
License:             GPL-2
License-file:        LICENSE
Author:              Reid Barton
Maintainer:          rwbarton@gmail.com
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.2


Library
  Exposed-modules:     Graphics.Potrace
  Build-depends:       base >= 3 && < 5,
                       bindings-potrace == 0.1.*
